--- a/restaurant/template/error.html
+++ b/restaurant/template/error.html
@@ -1,15 +1,91 @@
-<html>
-    <head>
-        <title>Error page</title>
-        <style>
-            body{
-                color: red;
-                background-color: white;
-                font-size: 30px;
-            }
-        </style>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration Success</title>
+</head>
+<body>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+.container {
+display: flex;
+align-items: center;
+justify-content: center
+}
+
+.img2 {
+		border-radius: 10%;
+}
+
+.card.container .image {
+  border-radius: 40%;
+  flex-basis: 40%;
+  width: 30%;
+  overflow: hidden;
+
+}
+
+.text {
+  font-size: 20px;
+  padding-left: 10px;
+  position: relative;
+  top: 5px;
+  color: #141414;
+}
+      body {
+        text-align: center;
+        padding: 40px 0;
+        width: 100%;
+        height: 50%;
+        background:#242e4c4e;
+      }
+        p {
+          color: black;
+          font-family: 'Poppins', sans-serif;
+          font-weight:700;
+          font-size:20px;
+          margin: 0;
+          position: relative;
+        }
+     
+      .card {
+        background: white;
+        padding: 100px;
+        padding-top: 20px;
+        border-radius: 4px;
+        box-shadow: 0 2px 3px #C8D0D8;
+        display: inline-block;
+        
+      }
+    .card .container .text .a{
+        position: absolute;
+    height: 80%;
+    width: 100%;
+    padding: 0 35px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    border-bottom: 2px solid #ccc;
+    border-top: 2px solid transparent;
+    transition: all 0.2s ease;
+    }
+    </style>
     <body>
-        <center><h1>Invalid Entry(-_-)!</h1></center>
+      <br><br>
+      <div class="card">
+        <p>Incorrect password</p>
+        <br>
+        <div class="container">
+          <div class="text">
+          <p>Please reenter the correct password</p>
+          <div class="input-field button">
+            <a href="registration.html">
+            <input type="submit" value="Retry">
+        </div></a>
+          </div>
+        </div>
+      </div>
     </body>
 </html>
